@@ -1,46 +1,30 @@
 package com.example.extensionblocker.mapper;
 
-import com.example.extensionblocker.dto.response.BlockedExtensionResponse;
-import com.example.extensionblocker.dto.response.CustomExtensionResponse;
-import com.example.extensionblocker.dto.response.ExtensionListResponse;
-import com.example.extensionblocker.dto.response.FixedExtensionResponse;
+import com.example.extensionblocker.dto.response.*;
 import com.example.extensionblocker.entity.CustomExtensionEntity;
 import com.example.extensionblocker.entity.FixedExtensionEntity;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ExtensionMapper {
 
-    private static final Integer CUSTOM_EXTENSION_LIMIT = 200;
+    // 커스텀 확장자는 최대 200개까지 허용
+    private static final int CUSTOM_EXTENSION_LIMIT = 200;
 
-    public CustomExtensionResponse toCustomExtensionResponse(CustomExtensionEntity customExtension) {
-        return new CustomExtensionResponse(customExtension.getId(),
-                        customExtension.getExtensionName()
-        );
-    }
-
-    public FixedExtensionResponse toFixedExtensionResponse(FixedExtensionEntity fixedExtension) {
-        return new FixedExtensionResponse(
-                fixedExtension.getId(),
-                fixedExtension.getExtensionName(),
-                fixedExtension.isBlocked()
-        );
-    }
-
+    // 고정 확장자와 커스텀 확장자를 분리해서 반환
     public ExtensionListResponse toExtensionListResponse(List<FixedExtensionEntity> fixedExtensionEntityList,
                                                          List<CustomExtensionEntity> customExtensionEntityList) {
 
         List<FixedExtensionResponse> fixedExtensionResponseList = fixedExtensionEntityList.stream()
                 .map(this::toFixedExtensionResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         List<CustomExtensionResponse> customExtensionResponseList = customExtensionEntityList.stream()
                 .map(this::toCustomExtensionResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ExtensionListResponse(
                 fixedExtensionResponseList,
@@ -50,8 +34,9 @@ public class ExtensionMapper {
         );
     }
 
+    // 차단된 고정 확장자와 커스텀 확장자를 하나의 목록으로 합쳐 반환
     public BlockedExtensionResponse toBlockedExtensionResponse(List<FixedExtensionEntity> fixedExtensionEntityList,
-                                    List<CustomExtensionEntity> customExtensionEntityList) {
+                                                               List<CustomExtensionEntity> customExtensionEntityList) {
 
         List<String> fixed = fixedExtensionEntityList.stream()
                 .map(FixedExtensionEntity::getExtensionName)
@@ -66,5 +51,39 @@ public class ExtensionMapper {
         result.addAll(custom);
 
         return new BlockedExtensionResponse(result);
+    }
+
+    public CustomExtensionListResponse toCustomExtensionListResponse(List<CustomExtensionEntity> customExtensionEntityList) {
+
+        List<CustomExtensionResponse> customExtensionResponseList = customExtensionEntityList.stream()
+                .map(this::toCustomExtensionResponse)
+                .toList();
+
+        return new CustomExtensionListResponse(customExtensionResponseList);
+    }
+
+    public CustomExtensionResponse toCustomExtensionResponse(CustomExtensionEntity customExtension) {
+
+        return new CustomExtensionResponse(
+                customExtension.getId(),
+                customExtension.getExtensionName()
+        );
+    }
+
+    public FixedExtensionListResponse toFixedExtensionListResponse(List<FixedExtensionEntity> fixedExtensionEntityList) {
+
+        List<FixedExtensionResponse> fixedExtensionResponses = fixedExtensionEntityList.stream()
+                .map(this::toFixedExtensionResponse)
+                .toList();
+
+        return new FixedExtensionListResponse(fixedExtensionResponses);
+    }
+
+    public FixedExtensionResponse toFixedExtensionResponse(FixedExtensionEntity fixedExtension) {
+        return new FixedExtensionResponse(
+                fixedExtension.getId(),
+                fixedExtension.getExtensionName(),
+                fixedExtension.isBlocked()
+        );
     }
 }
